--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "build": "sh build.sh"
+    "deploy": "sh deploy.sh"
   },
   "author": "",
   "license": "ISC",
