--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "md5": "^2.3.0"
   },
   "dependencies": {
-    "execa": "^5.1.1"
+    "execa": "^5.1.1",
+    "read-file-env": "0.0.4"
   }
 }
